# libsnark_abc

./: CMakeLists.txt  README.md
depends/: CMakeLists.txt
src/: CMakeLists.txt  range.cpp  test.cpp
